@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/help.php,v 1.16 2008/02/10 20:52:23 goddess_skuld Exp $ 
+ * $Header: /cvsroot/nocc/nocc/webmail/help.php,v 1.17 2008/10/13 19:54:25 gerundt Exp $ 
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -12,10 +12,10 @@
 require_once './common.php';
 $lang = $_SESSION['nocc_lang'];
 ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php echo $lang ?>" lang="<?php echo $lang ?>">
 <head>
-<title>NOCC - <?php echo $html_help ?></title>
+<title>NOCC - Webmail - <?php echo $html_help ?></title>
 <meta content="text/html; charset=<?php echo $charset ?>" http-equiv="Content-Type" />
 <link href="themes/<?php echo $_SESSION['nocc_theme'] ?>/style.css" rel="stylesheet" type="text/css" />
 </head>
