@@ -22,8 +22,8 @@ if(file_exists($custom_header)) {
 }
 else {
 ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php echo $lang; ?>">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php echo $lang ?>" lang="<?php echo $lang ?>">
     <head>
         <title>NOCC - Webmail</title>
         <meta http-equiv="Content-Type" content="text/html; charset=<?php echo convertLang2Html($charset); ?>" />
@@ -83,4 +83,4 @@ else {
 <?php
 }
 ?>
-<!-- end of $Id: header.php,v 1.76 2008/04/27 19:44:01 gerundt Exp $ -->
+<!-- end of $Id: header.php,v 1.77 2008/12/07 23:10:36 gerundt Exp $ -->
